<resources>
    <string name="app_name">Fantasy Badminton</string>
    <string name="draft">Draft</string>
    <string name="collection">Collection</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
