<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_draft"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/draft" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection"
        android:title="@string/collection" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_saved"
        android:title="@string/saved" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_credits"
        android:title="@string/credits" />

</menu>
